--- a/css/styles.css
+++ b/css/styles.css
@@ -139,18 +139,28 @@ img {
   }
 }
 
-.gallery-flex {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+/* gallery */
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-
   .gallery-item {
-    width: calc(33.333% - 20px);
     border-radius: 10px;
 
     img {
       border-radius: 10px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    &:nth-of-type(2) {
+      grid-column: span 2;
+    }
+
+    &:nth-of-type(7) {
+      grid-column: span 2;
+      grid-row: span 2;
     }
 
     &:hover {
@@ -271,9 +281,20 @@ img {
     }
   }
 
-  .gallery-flex {
-    .gallery-item {
-      width: calc(50% - 20px);
+  .galler-grid {
+    grid-template-columns: repeat(2, 1fr);
+
+    .gallery-item:nth-of-type(1) {
+      grid-column: span 2;
+    }
+
+    .gallery-item:nth-of-type(2) {
+      grid-column: span 1;
+    }
+
+    .gallery-item:nth-of-type(7) {
+      grid-column: span 1;
+      grid-row: span 1;
     }
   }
 
